--- a/app/src/main/res/layout/activity_student_list.xml
+++ b/app/src/main/res/layout/activity_student_list.xml
@@ -15,8 +15,13 @@
         android:ems="10"
         android:hint="First Name"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteY="16dp"
-        tools:layout_editor_absoluteX="85dp" />
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="16dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/txtLastName"
@@ -25,18 +30,29 @@
         android:ems="10"
         android:hint="Last Name"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteY="59dp"
-        tools:layout_editor_absoluteX="85dp" />
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/txtFirstName"
+        app:layout_constraintTop_toBottomOf="@+id/txtFirstName"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/txtFirstName" />
 
     <EditText
         android:id="@+id/txtYear"
         android:layout_width="214dp"
-        android:layout_height="44dp"
+        android:layout_height="0dp"
         android:ems="10"
         android:hint="Year"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteY="149dp"
-        tools:layout_editor_absoluteX="86dp" />
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/txtTeacherID"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="1dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtAge"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
         android:id="@+id/txtAge"
@@ -45,8 +61,12 @@
         android:ems="10"
         android:hint="Age"
         android:inputType="number"
-        tools:layout_editor_absoluteY="102dp"
-        tools:layout_editor_absoluteX="85dp" />
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/txtLastName"
+        app:layout_constraintTop_toBottomOf="@+id/txtLastName"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/txtLastName" />
 
     <EditText
         android:id="@+id/txtTeacherID"
@@ -55,21 +75,42 @@
         android:ems="10"
         android:hint="Teacher ID"
         android:inputType="number"
-        tools:layout_editor_absoluteY="193dp"
-        tools:layout_editor_absoluteX="85dp" />
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/txtAge"
+        android:layout_marginTop="45dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtAge"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/txtAge" />
 
     <Button
         android:id="@+id/btnSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save"
-        tools:layout_editor_absoluteY="236dp"
-        tools:layout_editor_absoluteX="137dp" />
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="52dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtTeacherID"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/txtTeacherID"
+        android:layout_marginLeft="52dp" />
 
     <ListView
         android:id="@+id/lstStudentsView"
-        android:layout_width="379dp"
-        android:layout_height="206dp"
-        tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="297dp" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="2dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="13dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnSave"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp" />
 </android.support.constraint.ConstraintLayout>
