--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:layout_marginStart="57dp"
         android:layout_marginTop="51dp"
         android:text="Teachers"
+        android:onClick="startTeacherActivity"
         android:layout_below="@+id/txtTitle"
         android:layout_alignLeft="@+id/txtTitle"
         android:layout_alignStart="@+id/txtTitle" />
@@ -39,6 +40,7 @@
         android:layout_marginStart="62dp"
         android:layout_toEndOf="@+id/btnTeachers"
         android:layout_toRightOf="@+id/btnTeachers"
-        android:text="Students" />
+        android:text="Students"
+        android:onClick="startStudentActivity"/>
 
 </RelativeLayout>
