--- a/app/src/main/res/layout/activity_student_list.xml
+++ b/app/src/main/res/layout/activity_student_list.xml
@@ -30,29 +30,29 @@
         android:ems="10"
         android:hint="Last Name"
         android:inputType="textPersonName"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/txtFirstName"
         app:layout_constraintRight_toRightOf="@+id/txtFirstName"
         app:layout_constraintTop_toBottomOf="@+id/txtFirstName"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/txtFirstName" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <EditText
         android:id="@+id/txtYear"
         android:layout_width="214dp"
         android:layout_height="0dp"
+        android:layout_marginTop="1dp"
         android:ems="10"
         android:hint="Year"
-        android:inputType="textPersonName"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
+        android:inputType="text"
         app:layout_constraintBottom_toTopOf="@+id/txtTeacherID"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="1dp"
         app:layout_constraintTop_toBottomOf="@+id/txtAge"
+        tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <EditText
         android:id="@+id/txtAge"
@@ -85,7 +85,7 @@
 
     <ListView
         android:id="@+id/lstStudentsView"
-        android:layout_width="380dp"
+        android:layout_width="0dp"
         android:layout_height="212dp"
         android:layout_marginBottom="3dp"
         android:layout_marginEnd="2dp"
@@ -97,16 +97,40 @@
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintRight_creator="1" />
+
+    <Button
+        android:id="@+id/btnRemoveStudent"
+        android:layout_width="104dp"
+        android:layout_height="53dp"
+        android:text="Remove Student"
         tools:layout_constraintTop_creator="1"
-        tools:layout_editor_absoluteY="296dp"
-        tools:layout_editor_absoluteX="1dp" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnRemoveAll"
+        android:layout_width="104dp"
+        android:layout_height="53dp"
+        android:text="Remove All"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btnRemoveStudent"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toRightOf="@+id/btnRemoveStudent" />
 
     <Button
         android:id="@+id/btnAddStudent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="104dp"
+        android:layout_height="53dp"
+        android:onClick="addStudent"
         android:text="Add Student"
-        tools:layout_editor_absoluteX="60dp"
-        tools:layout_editor_absoluteY="235dp" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/btnRemoveStudent"
+        app:layout_constraintRight_toLeftOf="@+id/btnRemoveStudent"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintRight_creator="1" />
 </android.support.constraint.ConstraintLayout>
