--- a/app/src/main/res/layout/activity_teacher_list.xml
+++ b/app/src/main/res/layout/activity_teacher_list.xml
@@ -47,7 +47,6 @@
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         app:layout_constraintRight_toRightOf="@+id/txtLastName"
-        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/txtLastName"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="@+id/txtLastName"
@@ -63,7 +62,6 @@
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         app:layout_constraintRight_toRightOf="@+id/txtFirstName"
-        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/txtFirstName"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="@+id/txtFirstName"
@@ -73,7 +71,6 @@
         android:id="@+id/txtPhone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-16dp"
         android:ems="10"
         android:hint="Phone"
         android:inputType="phone"
@@ -86,11 +83,39 @@
         app:layout_constraintHorizontal_bias="0.0" />
 
     <Button
-        android:id="@+id/btnSave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Save"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="196dp" />
+        android:id="@+id/btnAddTeacher"
+        android:layout_width="104dp"
+        android:layout_height="53dp"
+        android:text="Add Teacher"
+        app:layout_constraintRight_toLeftOf="@+id/btnRemoveTeacher"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btnRemoveTeacher"
+        tools:layout_constraintBaseline_creator="1" />
+
+    <Button
+        android:id="@+id/btnRemoveTeacher"
+        android:layout_width="104dp"
+        android:layout_height="53dp"
+        android:text="Remove Teacher"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/lstTeachersView"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="43dp"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="35dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/txtPhone" />
+
+    <Button
+        android:id="@+id/btnRemoveAll"
+        android:layout_width="104dp"
+        android:layout_height="53dp"
+        android:text="Remove All"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btnRemoveTeacher"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toRightOf="@+id/btnRemoveTeacher" />
 
 </android.support.constraint.ConstraintLayout>
