--- a/app/src/main/res/layout/activity_teacher_list.xml
+++ b/app/src/main/res/layout/activity_teacher_list.xml
@@ -90,7 +90,8 @@
         app:layout_constraintRight_toLeftOf="@+id/btnRemoveTeacher"
         tools:layout_constraintRight_creator="1"
         app:layout_constraintBaseline_toBaselineOf="@+id/btnRemoveTeacher"
-        tools:layout_constraintBaseline_creator="1" />
+        tools:layout_constraintBaseline_creator="1"
+        android:onClick="addTeacher"/>
 
     <Button
         android:id="@+id/btnRemoveTeacher"
@@ -106,7 +107,8 @@
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="35dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txtPhone" />
+        app:layout_constraintTop_toTopOf="@+id/txtPhone"/>
+        <!--android:onClick="removeTeacher"-->
 
     <Button
         android:id="@+id/btnRemoveAll"
@@ -116,6 +118,7 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/btnRemoveTeacher"
         tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toRightOf="@+id/btnRemoveTeacher" />
+        app:layout_constraintLeft_toRightOf="@+id/btnRemoveTeacher"
+        android:onClick="removeAllTeachers"/>
 
 </android.support.constraint.ConstraintLayout>
