--- a/app/src/main/res/layout/activity_student_list.xml
+++ b/app/src/main/res/layout/activity_student_list.xml
@@ -121,7 +121,8 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/btnRemoveStudent"
         tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toRightOf="@+id/btnRemoveStudent" />
+        app:layout_constraintLeft_toRightOf="@+id/btnRemoveStudent"
+        android:onClick="removeAllStudents"/>
 
     <Button
         android:id="@+id/btnAddStudent"
