--- a/app/src/main/res/layout/activity_student_list.xml
+++ b/app/src/main/res/layout/activity_student_list.xml
@@ -45,11 +45,9 @@
         android:ems="10"
         android:hint="Year"
         android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/txtTeacherID"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtAge"
-        tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1" />
@@ -67,21 +65,6 @@
         app:layout_constraintTop_toBottomOf="@+id/txtLastName"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="@+id/txtLastName" />
-
-    <EditText
-        android:id="@+id/txtTeacherID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Teacher ID"
-        android:inputType="number"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/txtAge"
-        android:layout_marginTop="45dp"
-        app:layout_constraintTop_toBottomOf="@+id/txtAge"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/txtAge" />
 
     <ListView
         android:id="@+id/lstStudentsView"
@@ -134,4 +117,12 @@
         app:layout_constraintRight_toLeftOf="@+id/btnRemoveStudent"
         tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintRight_creator="1" />
+
+    <Spinner
+        android:id="@+id/spinTeacherList"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnRemoveStudent"
+        tools:layout_editor_absoluteX="8dp" />
 </android.support.constraint.ConstraintLayout>
