--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,9 +22,9 @@
         android:id="@+id/btnTeachers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="57dp"
-        android:layout_marginStart="57dp"
-        android:layout_marginTop="51dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginTop="163dp"
         android:text="Teachers"
         android:onClick="startTeacherActivity"
         android:layout_below="@+id/txtTitle"
@@ -42,5 +42,15 @@
         android:layout_toRightOf="@+id/btnTeachers"
         android:text="Students"
         android:onClick="startStudentActivity"/>
+
+    <Spinner
+        android:id="@+id/spinStudent"
+        android:layout_width="match_parent"
+        android:layout_height="80sp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/txtTitle"
+        android:layout_marginTop="28dp"
+        android:background="@android:color/holo_blue_dark" />
 
 </RelativeLayout>
