--- a/app/src/main/res/layout/activity_student_list.xml
+++ b/app/src/main/res/layout/activity_student_list.xml
@@ -95,7 +95,7 @@
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1"
-        app:layout_constraintVertical_bias="0.537" />
+        app:layout_constraintVertical_bias="0.572" />
 
     <Button
         android:id="@+id/btnRemoveAll"
@@ -123,24 +123,27 @@
 
     <Spinner
         android:id="@+id/spinTeacherList"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="-3dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnRemoveStudent"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="8dp"
+        android:layout_width="366dp"
+        android:layout_height="37dp"
+        android:layout_marginBottom="0dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.0" />
+        android:layout_marginStart="8dp"
+        android:background="@android:color/holo_blue_bright"
+        app:layout_constraintBottom_toTopOf="@+id/btnRemoveStudent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_editor_absoluteX="10dp"
+        tools:layout_editor_absoluteY="225dp" />
 
     <ListView
         android:id="@+id/lstStudentsView"
-        android:layout_width="0dp"
-        android:layout_height="212dp"
+        android:layout_width="377dp"
+        android:layout_height="196dp"
         android:layout_marginBottom="-49dp"
         android:layout_marginEnd="2dp"
         android:layout_marginLeft="2dp"
@@ -152,5 +155,6 @@
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_editor_absoluteY="315dp" />
 </android.support.constraint.ConstraintLayout>
