--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -2,9 +2,10 @@
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         style="?android:attr/spinnerItemStyle"
         android:singleLine="true"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
+        android:background="#0090ff"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:textAlignment="center"
-        android:layout_gravity="center"
+        android:gravity="center"
         android:ellipsize="middle" />
