--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -5,7 +5,7 @@
         android:textColor="#000000"
         android:background="#0090ff"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="50sp"
         android:textAlignment="center"
         android:gravity="center"
         android:ellipsize="middle" />
