--- a/app/src/main/res/layout/activity_student_list.xml
+++ b/app/src/main/res/layout/activity_student_list.xml
@@ -124,13 +124,13 @@
     <Spinner
         android:id="@+id/spinTeacherList"
         android:layout_width="325dp"
-        android:layout_height="40dp"
+        android:layout_height="40sp"
         android:layout_marginBottom="-3dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:background="@android:color/holo_blue_bright"
+        android:background="@android:color/background_light"
         app:layout_constraintBottom_toTopOf="@+id/btnRemoveStudent"
         app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintLeft_toLeftOf="parent"
