--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,6 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/txtTitle"
         android:layout_marginTop="28dp"
-        android:background="@android:color/holo_blue_dark" />
+        android:background="@android:color/background_light" />
 
 </RelativeLayout>
