--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-        style="?android:attr/spinnerItemStyle"
-        android:singleLine="true"
-        android:textColor="#000000"
-        android:background="#0090ff"
-        android:layout_width="fill_parent"
-        android:layout_height="50sp"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:ellipsize="middle" />
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/spinnerItem"
+    style="?android:attr/spinnerItemStyle"
+    android:layout_width="fill_parent"
+    android:layout_height="50sp"
+    android:background="#0090ff"
+    android:ellipsize="middle"
+    android:gravity="center"
+    android:singleLine="true"
+    android:textAlignment="center"
+    android:textColor="#000000" />
