Filtering, deleting single students/teachers added
Filtering is now possible on the main  activity, additionally, teachers and students are now able to be deleted from within the activities. Still to do is implement foreign keys so that if a Teacher is deleted the subsequent students are deleted or it throws an error that the students must be reassigned. Additionally to do, make it possible to edit student information.

--- a/app/src/main/res/layout/activity_student_list.xml
+++ b/app/src/main/res/layout/activity_student_list.xml
@@ -12,17 +12,16 @@
         android:id="@+id/txtFirstName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
         android:ems="10"
         android:hint="@string/txtFirstName"
         android:inputType="textPersonName"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1"
-        app:layout_constraintHorizontal_bias="0.502" />
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="6dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/txtLastName"
@@ -31,27 +30,27 @@
         android:ems="10"
         android:hint="@string/txtLastName"
         android:inputType="textPersonName"
-        app:layout_constraintLeft_toLeftOf="@+id/txtFirstName"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
         app:layout_constraintRight_toRightOf="@+id/txtFirstName"
         app:layout_constraintTop_toBottomOf="@+id/txtFirstName"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        app:layout_constraintLeft_toLeftOf="@+id/txtFirstName" />
 
     <EditText
         android:id="@+id/txtYear"
         android:layout_width="214dp"
         android:layout_height="0dp"
-        android:layout_marginTop="1dp"
         android:ems="10"
         android:hint="@string/txtYear"
         android:inputType="text"
-        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="1dp"
         app:layout_constraintTop_toBottomOf="@+id/txtAge"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
         android:id="@+id/txtAge"
@@ -60,84 +59,100 @@
         android:ems="10"
         android:hint="@string/txtAge"
         android:inputType="number"
-        app:layout_constraintLeft_toLeftOf="@+id/txtLastName"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
         app:layout_constraintRight_toRightOf="@+id/txtLastName"
         app:layout_constraintTop_toBottomOf="@+id/txtLastName"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        app:layout_constraintLeft_toLeftOf="@+id/txtLastName" />
 
     <Button
         android:id="@+id/btnRemoveStudent"
-        android:layout_width="104dp"
+        android:layout_width="116dp"
         android:layout_height="53dp"
         android:text="@string/txtRemoveStudent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1"
-        app:layout_constraintVertical_bias="0.572" />
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="68dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtYear"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:onClick = "removeCheckedStudents"/>
+
 
     <Button
         android:id="@+id/btnRemoveAll"
-        android:layout_width="104dp"
-        android:layout_height="53dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:onClick="removeAllStudents"
         android:text="@string/txtRemoveAll"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btnRemoveStudent"
-        app:layout_constraintLeft_toRightOf="@+id/btnRemoveStudent"
-        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="5dp"
+        app:layout_constraintBottom_toBottomOf="@+id/btnRemoveStudent"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintRight_toRightOf="@+id/lstStudentsView"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginLeft="0dp" />
+        app:layout_constraintTop_toTopOf="@+id/btnRemoveStudent"
+        app:layout_constraintLeft_toRightOf="@+id/btnRemoveStudent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp" />
 
     <Button
         android:id="@+id/btnAddStudent"
-        android:layout_width="104dp"
+        android:layout_width="0dp"
         android:layout_height="53dp"
         android:onClick="addStudent"
         android:text="@string/txtAddStudent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btnRemoveStudent"
         app:layout_constraintRight_toLeftOf="@+id/btnRemoveStudent"
-        tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintRight_creator="1"
-        android:layout_marginRight="0dp" />
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="6dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btnRemoveStudent"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/lstStudentsView"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="6dp" />
 
     <Spinner
         android:id="@+id/spinTeacherList"
-        android:layout_width="325dp"
-        android:layout_height="40sp"
-        android:layout_marginBottom="29dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@android:color/background_light"
-        app:layout_constraintBottom_toTopOf="@+id/btnRemoveStudent"
-        app:layout_constraintHorizontal_bias="0.511"
-        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/btnAddStudent"
+        android:layout_marginStart="21dp"
+        android:layout_marginEnd="21dp"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtYear"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        android:layout_marginBottom="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="21dp"
+        android:layout_marginRight="21dp" />
 
     <ListView
         android:id="@+id/lstStudentsView"
-        android:layout_width="377dp"
-        android:layout_height="196dp"
-        android:layout_marginBottom="-49dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
-        android:layout_marginStart="2dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_editor_absoluteY="315dp" />
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="13dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnAddStudent"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp" />
 </android.support.constraint.ConstraintLayout>
