--- a/app/src/main/res/layout/activity_teacher_list.xml
+++ b/app/src/main/res/layout/activity_teacher_list.xml
@@ -107,8 +107,8 @@
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
-        <!--android:onClick="removeTeacher"-->
+        tools:layout_constraintTop_creator="1"
+        android:onClick="removeTeacher"/>
 
     <Button
         android:id="@+id/btnRemoveAll"
